[tool.poetry]
name = "Projeto Integrador 5"
version = "0.1.0"
description = ""
authors = ["afonsomedeiros <afonso.b.medeiros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.25"
pymongo = "^4.6.0"
jwt-bottle = "^2021.4.1"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
